sumo/tests/sumo/errors/unknown_option/Makefile.am
EXTRA_DIST =  errors.sumo.exe options.sumo output.sumo.exe

